@@ -1,5 +1,7 @@
 package org.opentripplanner.raptorlegacy._data.transit;
 
+import static org.opentripplanner.raptorlegacy._data.RaptorTestConstants.createDeprecatedUnsupportedFeatureException;
+
 import java.util.ArrayList;
 import java.util.BitSet;
 import java.util.HashSet;
@@ -7,21 +9,21 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import javax.annotation.Nullable;
-import org.opentripplanner.raptor.api.model.RaptorConstrainedTransfer;
-import org.opentripplanner.raptor.api.model.RaptorStopNameResolver;
-import org.opentripplanner.raptor.api.model.RaptorTransfer;
-import org.opentripplanner.raptor.api.model.RaptorTripPattern;
 import org.opentripplanner.raptor.spi.IntIterator;
+import org.opentripplanner.raptor.spi.IntIterators;
 import org.opentripplanner.raptor.spi.RaptorConstrainedBoardingSearch;
+import org.opentripplanner.raptor.spi.RaptorConstrainedTransfer;
 import org.opentripplanner.raptor.spi.RaptorCostCalculator;
 import org.opentripplanner.raptor.spi.RaptorPathConstrainedTransferSearch;
 import org.opentripplanner.raptor.spi.RaptorRoute;
 import org.opentripplanner.raptor.spi.RaptorSlackProvider;
+import org.opentripplanner.raptor.spi.RaptorStopNameResolver;
 import org.opentripplanner.raptor.spi.RaptorTimeTable;
+import org.opentripplanner.raptor.spi.RaptorTransfer;
 import org.opentripplanner.raptor.spi.RaptorTransitDataProvider;
-import org.opentripplanner.raptor.util.BitSetIterator;
+import org.opentripplanner.raptor.spi.RaptorTripPattern;
+import org.opentripplanner.raptor.spi.RaptorTripScheduleReference;
 import org.opentripplanner.raptorlegacy._data.RaptorTestConstants;
-import org.opentripplanner.routing.algorithm.raptoradapter.transit.DefaultRaptorTransfer;
 import org.opentripplanner.routing.algorithm.raptoradapter.transit.cost.CostCalculatorFactory;
 import org.opentripplanner.routing.algorithm.raptoradapter.transit.cost.GeneralizedCostParameters;
 import org.opentripplanner.routing.algorithm.raptoradapter.transit.cost.GeneralizedCostParametersBuilder;
@@ -37,7 +39,8 @@ import org.opentripplanner.transfer.constrained.model.TransferConstraint;
 @Deprecated
 @SuppressWarnings("UnusedReturnValue")
 public class TestTransitData
-  implements RaptorTransitDataProvider<TestTripSchedule>, RaptorTestConstants {
+  implements RaptorTransitDataProvider<TestTripSchedule>, RaptorTestConstants
+{
 
   public static final TransferConstraint TX_GUARANTEED = TransferConstraint.of()
     .guaranteed()
@@ -79,7 +82,7 @@ public class TestTransitData
         routes.set(i);
       }
     }
-    return new BitSetIterator(routes);
+    return IntIterators.of(routes);
   }
 
   @Override
@@ -90,6 +93,11 @@ public class TestTransitData
   @Override
   public int numberOfStops() {
     return routeIndexesByStopIndex.size();
+  }
+
+  @Override
+  public int numberOfTripPatterns() {
+    return routes.size();
   }
 
   @Override
@@ -134,7 +142,7 @@ public class TestTransitData
           return null;
         }
         if (list.size() == 1) {
-          return list.get(0);
+          return list.getFirst();
         }
         throw new IllegalStateException("More than on transfers found: " + list);
       }
@@ -149,7 +157,8 @@ public class TestTransitData
 
   @Override
   public int getValidTransitDataStartTime() {
-    return this.routes.stream()
+    return this.routes
+      .stream()
       .mapToInt(route -> route.timetable().getTripSchedule(0).departure(0))
       .min()
       .orElseThrow();
@@ -157,7 +166,8 @@ public class TestTransitData
 
   @Override
   public int getValidTransitDataEndTime() {
-    return this.routes.stream()
+    return this.routes
+      .stream()
       .mapToInt(route -> {
         RaptorTimeTable<TestTripSchedule> timetable = route.timetable();
         RaptorTripPattern pattern = route.pattern();
@@ -181,6 +191,11 @@ public class TestTransitData
     int routeIndex
   ) {
     return getRoute(routeIndex).transferConstraintsReverseSearch();
+  }
+
+  @Override
+  public RaptorTripScheduleReference tripScheduleReference(TestTripSchedule trip) {
+    throw createDeprecatedUnsupportedFeatureException();
   }
 
   public TestRoute getRoute(int index) {
@@ -207,7 +222,7 @@ public class TestTransitData
     return this;
   }
 
-  public TestTransitData withTransfer(int fromStop, DefaultRaptorTransfer transfer) {
+  public TestTransitData withTransfer(int fromStop, TestTransfer transfer) {
     expandNumOfStops(Math.max(fromStop, transfer.stop()));
     transfersFromStop.get(fromStop).add(transfer);
     transfersToStop.get(transfer.stop()).add(transfer.reverseOf(fromStop));
@@ -246,8 +261,8 @@ public class TestTransitData
     int toStop,
     TransferConstraint constraint
   ) {
-    int fromStopPos = fromTrip.pattern().findStopPositionAfter(0, fromStop);
-    int toStopPos = toTrip.pattern().findStopPositionAfter(0, toStop);
+    int fromStopPos = fromTrip.pattern().findAlightStopPositionAfter(0, fromStop);
+    int toStopPos = toTrip.pattern().findBoardStopPositionAfter(0, toStop);
 
     for (TestRoute route : routes) {
       route.addTransferConstraint(fromTrip, fromStopPos, toTrip, toStopPos, constraint);
